...

    <!-- General -->
    <string name="logo">Logo von WaterMe</string>
    <string name="app_name">WaterMe</string>

    <!-- Main Menu -->
    <string name="plant_menu">My plants</string>
    <string name="help_menu">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- About Menu -->
    <string name="TXTabout">
        WaterMe is the software engineering project of three students at the cooperative states university Karlsruhe, Germany.\n
        \n
        Starting in october 2016 we planned to create a system which can measure the humidity of a plant and
...
    </string>
    <string name="jodel">The jodel community approves:</string>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="raspberry_leds">Raspberry LEDs</string>
    <string name="raspberry_wifi">Raspberry WiFi</string>
    <string name="sounds">Sounds</string>
    <string name="submit">Submit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth">Bluetooth</string>
    <string name="bluetooth_paired">Connect to paired device</string>
    <string name="bluetooth_found">Find new devices</string>
    <string name="reload">Reload</string>
    <string name="connect">connect</string>
    <string name="MyPlant">My Plant</string>
    <string name="graph">Graph</string>

    <!-- help -->
    <string name="AskUs">Ask Us</string>
    <string name="helpEnableBtAndConnectPi">Enable Bluetooth and connect Pi</string>
    <string name="helpInstallPi">Install Pi</string>
    <string name="helpAddPlant">Add plant</string>
    <string name="help_connect_bluetooth_and_pi">
        Prequisite: \n
        Your Smartphone has to be paired with the Pi. \n
        To do so head to the Bluetooth-Menu of your Smartphone, enable Bluetooth and click on your Pi. \n
        \n
        \n
...
