...
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWnotifications"
                android:layout_gravity="center_vertical|end" />

            <TextView
                android:text="@string/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_below="@+id/frameLayout2"
            android:layout_alignParentStart="true">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWsounds"
                android:layout_gravity="center_vertical|end"
                android:gravity="end" />

            <TextView
                android:text="@string/sounds"
                android:layout_width="wrap_content"
...
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SWled"
                android:layout_gravity="center_vertical|end"
                android:checked="false" />
        </FrameLayout>

        <Button
            android:text="@string/raspberry_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNraspberrywifi"
            android:background="@android:color/transparent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <Button
            android:text="@string/bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNbluetooth"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

    </LinearLayout>

...
