...

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/TXTwifi_id"
            android:textAlignment="textStart"
            android:hint="Enter SSID" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/TXTwifi_password"
            android:contentDescription="Password"
            android:hint="Enter Password" />

        <Button
            android:text="@string/submit"
            android:layout_height="wrap_content"
            android:id="@+id/BTNsubmit"
            android:textAlignment="center"
            android:layout_gravity="right"
            android:layout_width="128dp"
            android:onClick="onButtonTapSubmit" />
    </LinearLayout>

...
